Fix layout issues by changing container size and creating wrapper class based on design

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,16 @@
   }
 }
 
+@layer utilities {
+  .wrapper {
+    @apply mx-auto 2xl:w-5/6;
+  }
+}
+
+.container {
+  @apply 2xl:max-w-[1664px];
+}
+
 .menu-item {
   @apply relative px-3 xl:px-5 lg:py-[10px];
 }
